[package]
name = "godirect-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.11.1", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rusb = "0.9.3"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = "1.5.0"
